--- a/app.yaml
+++ b/app.yaml
@@ -16,8 +16,8 @@ instance_class: F2
 
 # Handlers define how to route requests to your application.
 handlers:
-- url: /static
-  static_dir: static
+#- url: /static
+#  static_dir: static
 # App Engine serves and caches static files contained in the listed directories
 # (and subdirectories). Uncomment and set the directory as needed.
 #- url: /client
